--- a/yusuf/src/components/styles/Loading.css
+++ b/yusuf/src/components/styles/Loading.css
@@ -54,8 +54,8 @@
   border-radius: 100px;
   background-color: #000;
   overflow: hidden;
-  transition: 0.8s ease-in-out;
-  transition-delay: 0.2s;
+  transition: 1.5s ease-in-out;
+  transition-delay: 0.1s;
   box-shadow: 0px 15px 15px 0px rgba(0, 0, 0, 0.2);
   display: flex;
   justify-content: center;
